events: rename audit to events
