# swagger.yaml
@@ -82,112 +82,6 @@ paths:
         in: path
         required: true
         type: string
-  /audit/events/:
-    get:
-      operationId: audit_events_list
-      description: Event Read-Only Viewset
-      parameters:
-        - name: ordering
-          in: query
-          description: Which field to use when ordering the results.
-          required: false
-          type: string
-        - name: search
-          in: query
-          description: A search term.
-          required: false
-          type: string
-        - name: page
-          in: query
-          description: A page number within the paginated result set.
-          required: false
-          type: integer
-        - name: page_size
-          in: query
-          description: Number of results to return per page.
-          required: false
-          type: integer
-      responses:
-        '200':
-          description: ''
-          schema:
-            required:
-              - count
-              - results
-            type: object
-            properties:
-              count:
-                type: integer
-              next:
-                type: string
-                format: uri
-                x-nullable: true
-              previous:
-                type: string
-                format: uri
-                x-nullable: true
-              results:
-                type: array
-                items:
-                  $ref: '#/definitions/Event'
-      tags:
-        - audit
-    parameters: []
-  /audit/events/top_per_user/:
-    get:
-      operationId: audit_events_top_per_user
-      description: Get the top_n events grouped by user count
-      parameters:
-        - name: ordering
-          in: query
-          description: Which field to use when ordering the results.
-          required: false
-          type: string
-        - name: search
-          in: query
-          description: A search term.
-          required: false
-          type: string
-        - name: page
-          in: query
-          description: A page number within the paginated result set.
-          required: false
-          type: integer
-        - name: page_size
-          in: query
-          description: Number of results to return per page.
-          required: false
-          type: integer
-      responses:
-        '200':
-          description: Response object of Event's top_per_user
-          schema:
-            description: ''
-            type: array
-            items:
-              $ref: '#/definitions/EventTopPerUserSerialier'
-      tags:
-        - audit
-    parameters: []
-  /audit/events/{event_uuid}/:
-    get:
-      operationId: audit_events_read
-      description: Event Read-Only Viewset
-      parameters: []
-      responses:
-        '200':
-          description: ''
-          schema:
-            $ref: '#/definitions/Event'
-      tags:
-        - audit
-    parameters:
-      - name: event_uuid
-        in: path
-        description: A UUID string identifying this Audit Event.
-        required: true
-        type: string
-        format: uuid
   /core/applications/:
     get:
       operationId: core_applications_list
@@ -892,6 +786,112 @@ paths:
       - name: kp_uuid
         in: path
         description: A UUID string identifying this Certificate-Key Pair.
+        required: true
+        type: string
+        format: uuid
+  /events/events/:
+    get:
+      operationId: events_events_list
+      description: Event Read-Only Viewset
+      parameters:
+        - name: ordering
+          in: query
+          description: Which field to use when ordering the results.
+          required: false
+          type: string
+        - name: search
+          in: query
+          description: A search term.
+          required: false
+          type: string
+        - name: page
+          in: query
+          description: A page number within the paginated result set.
+          required: false
+          type: integer
+        - name: page_size
+          in: query
+          description: Number of results to return per page.
+          required: false
+          type: integer
+      responses:
+        '200':
+          description: ''
+          schema:
+            required:
+              - count
+              - results
+            type: object
+            properties:
+              count:
+                type: integer
+              next:
+                type: string
+                format: uri
+                x-nullable: true
+              previous:
+                type: string
+                format: uri
+                x-nullable: true
+              results:
+                type: array
+                items:
+                  $ref: '#/definitions/Event'
+      tags:
+        - events
+    parameters: []
+  /events/events/top_per_user/:
+    get:
+      operationId: events_events_top_per_user
+      description: Get the top_n events grouped by user count
+      parameters:
+        - name: ordering
+          in: query
+          description: Which field to use when ordering the results.
+          required: false
+          type: string
+        - name: search
+          in: query
+          description: A search term.
+          required: false
+          type: string
+        - name: page
+          in: query
+          description: A page number within the paginated result set.
+          required: false
+          type: integer
+        - name: page_size
+          in: query
+          description: Number of results to return per page.
+          required: false
+          type: integer
+      responses:
+        '200':
+          description: Response object of Event's top_per_user
+          schema:
+            description: ''
+            type: array
+            items:
+              $ref: '#/definitions/EventTopPerUserSerialier'
+      tags:
+        - events
+    parameters: []
+  /events/events/{event_uuid}/:
+    get:
+      operationId: events_events_read
+      description: Event Read-Only Viewset
+      parameters: []
+      responses:
+        '200':
+          description: ''
+          schema:
+            $ref: '#/definitions/Event'
+      tags:
+        - events
+    parameters:
+      - name: event_uuid
+        in: path
+        description: A UUID string identifying this Event.
         required: true
         type: string
         format: uuid
@@ -6494,78 +6494,6 @@ definitions:
         type: array
         items:
           type: string
-  Event:
-    description: Event Serializer
-    required:
-      - action
-      - app
-    type: object
-    properties:
-      pk:
-        title: Event uuid
-        type: string
-        format: uuid
-        readOnly: true
-      user:
-        title: User
-        type: object
-      action:
-        title: Action
-        type: string
-        enum:
-          - login
-          - login_failed
-          - logout
-          - user_write
-          - suspicious_request
-          - password_set
-          - token_view
-          - invitation_created
-          - invitation_used
-          - authorize_application
-          - source_linked
-          - impersonation_started
-          - impersonation_ended
-          - model_created
-          - model_updated
-          - model_deleted
-          - custom_
-      app:
-        title: App
-        type: string
-        minLength: 1
-      context:
-        title: Context
-        type: object
-      client_ip:
-        title: Client ip
-        type: string
-        minLength: 1
-        x-nullable: true
-      created:
-        title: Created
-        type: string
-        format: date-time
-        readOnly: true
-  EventTopPerUserSerialier:
-    description: Response object of Event's top_per_user
-    required:
-      - application
-      - counted_events
-      - unique_users
-    type: object
-    properties:
-      application:
-        title: Application
-        type: object
-        additionalProperties:
-          type: string
-      counted_events:
-        title: Counted events
-        type: integer
-      unique_users:
-        title: Unique users
-        type: integer
   Application:
     description: Application Serializer
     required:
@@ -6751,6 +6679,79 @@ definitions:
         description: Optional Private Key. If this is set, you can use this keypair
           for encryption.
         type: string
+  Event:
+    description: Event Serializer
+    required:
+      - action
+      - app
+    type: object
+    properties:
+      pk:
+        title: Event uuid
+        type: string
+        format: uuid
+        readOnly: true
+      user:
+        title: User
+        type: object
+      action:
+        title: Action
+        type: string
+        enum:
+          - login
+          - login_failed
+          - logout
+          - user_write
+          - suspicious_request
+          - password_set
+          - token_view
+          - invitation_created
+          - invitation_used
+          - authorize_application
+          - source_linked
+          - impersonation_started
+          - impersonation_ended
+          - policy_exception
+          - model_created
+          - model_updated
+          - model_deleted
+          - custom_
+      app:
+        title: App
+        type: string
+        minLength: 1
+      context:
+        title: Context
+        type: object
+      client_ip:
+        title: Client ip
+        type: string
+        minLength: 1
+        x-nullable: true
+      created:
+        title: Created
+        type: string
+        format: date-time
+        readOnly: true
+  EventTopPerUserSerialier:
+    description: Response object of Event's top_per_user
+    required:
+      - application
+      - counted_events
+      - unique_users
+    type: object
+    properties:
+      application:
+        title: Application
+        type: object
+        additionalProperties:
+          type: string
+      counted_events:
+        title: Counted events
+        type: integer
+      unique_users:
+        title: Unique users
+        type: integer
   Stage:
     title: Stage obj
     description: Stage Serializer
